welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:3: error: not found: type couleur
	var depart:couleur = getCouleurSol()
                   ^Array1:9: error: not found: type couleur
	var tab = new Array[couleur](hauteur)
                            ^